examples/invalid/test25.alice

The room hatta () contained a number
opened 

closed
